--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <p>This is a new feature (button)</p>
 <p>Added a dropdown</p>
 <p>This is a new feature (dropdown)</p>
+<p>Added a button</p>
+<p>Hello people</p>
